@@ -25,22 +25,22 @@
 # [Windows] Password for the PFX code signing certificate
 # WINDOWS_PFX_PASSWORD="super-secret-password"
 
+# [macOS] Certificate ID for the Developer ID Application code signing certificate
+# APPLE_CODESIGN_ID="Developer ID Application: Acme Inc (ABC123XYZ9)"
+
+# [macOS] Base64 encoded P12 code signing certificate
+# APPLE_P12_CERTIFICATE="very-long-base64-encoded-string"
+
+# [macOS] Password for the P12 code signing certificate
+# APPLE_P12_PASSWORD="super-secret-password"
+
+# [macOS] Apple Team ID 
+# https://developer.apple.com/account/#/membership
+# APPLE_TEAM_ID="ABC123XYZ9"
+
 # [macOS] Apple ID used to notarize the app
 # APPLE_NOTARY_USER="example@example.com"
 
 # [macOS] App-specific password for the Apple ID
 # https://support.apple.com/en-gb/102654
 # APPLE_NOTARY_PASSWORD="super-secret-password"
-
-# [macOS] Apple Team ID 
-# https://developer.apple.com/account/#/membership
-# APPLE_TEAM_ID="ABC123XYZ9"
-
-# [macOS] Certificate ID for the Developer ID Application code signing certificate
-# APPLE_CODESIGN_ID="Developer ID Application: Acme Inc (ABC123XYZ9)"
-
-# [macOS] Password for the P12 code signing certificate
-# APPLE_P12_PASSWORD="super-secret-password"
-
-# [macOS] Base64 encoded P12 code signing certificate
-# APPLE_P12_CERTIFICATE="very-long-base64-encoded-string"
